Calculate the minimum of a field group based on the widths of the fields